introduces session and idle timeount configuration over WD protocol. Fixes minor issues with session archiver
